--- a/Views/Tasks/Table.cshtml
+++ b/Views/Tasks/Table.cshtml
@@ -1,31 +1,25 @@
 ﻿@using TasksDatabase.Models
-@model IndexViewModel
+@model TableViewModel
 @{
     ViewData["Title"] = "Home Page";
 }
 
 <head>
     <style type="text/css">
-        .bg-info {
-            color: white;
-            text-shadow: white 0 0 2px;
-        }
-
-        .bg-success {
-            color: white;
-            text-shadow: red 0 0 2px;
-        }
-
-        .decline-accept {
-            position: relative;
-            margin: auto auto;
-            float: left;
+        .hiddenRow {
+            padding: 0 !important;
         }
     </style>
     <script>
         var hided = false;
+
+        function Block(id) {
+            document.getElementById(id).disabled = true;
+            return true;
+        }
+
         function toggle() {
-            var rows = document.getElementsByClassName("bg-success");
+            var rows = document.getElementsByClassName("completed");
             if (hided) {
                 for (i = 0; i < rows.length; i++)
                     rows[i].style.display = 'table-row';
@@ -42,7 +36,7 @@
 <br>
 <div><b>Выполнено: @Model.CompletedCount/@Model.TotalCount</b></div>
 
-<table class="table table-hover">
+<table class="table table-hover" style="border-collapse:collapse;">
     <thead>
         <tr>
             <th scope="col">№</th>
@@ -55,124 +49,160 @@
     </thead>
     <tbody>
         @{ int i = 0;}
-        @foreach (var tracking in Model.Trackings)
+
+        @foreach (var taskViewModel in Model.TaskViewModelList)
         {
-            i++;
-            if (tracking.Status.Name == "Не перенесён" && tracking.Task.DeveloperId == Model.UserId
-                    || tracking.Status.Name == "Не проверен" && tracking.Task.ReviewerId == Model.UserId
-                        || tracking.Status.Name == "Не доработан" && tracking.Task.DeveloperId == Model.UserId)
+            string Status = taskViewModel.Tracking.Status.Name;
+            string Developer = taskViewModel.Tracking.Problem.DeveloperId;
+            string Reviewer = taskViewModel.Tracking.Problem.ReviewerId;
+            string CurrentUser = Model.UserId;
+            Tracking tracking = taskViewModel.Tracking;
+
+            string ProblemType = "";
+            @switch (Status)
             {
-                <tr>
-                    <td>@i</td>
-                    <td>@tracking.Task.Course.Name</td>
-                    <td>@tracking.Task.Name</td>
-                    @switch (tracking.Status.Name)
-                    {
-                        case "Не перенесён":
-                            <td>Перенос</td>
-                            break;
-                        case "Не проверен":
-                            <td>Проверка</td>
-                            break;
-                        case "Не доработан":
-                            <td>Перенос (доработка)</td>
-                            break;
-                    }
-                    @if (Model.CanAcceptTask)
-                    {
-                        <td>
-                            @*исправить!!!!!!*@
-                            <button class="btn btn-primary btn-block" type="button" data-toggle="collapse" data-target="#{{ tracking.Id }}"
-                                    aria-expanded="false" aria-controls="collapseExample">
-                                Принять
-                            </button>
-                            <div class="collapse" id="@tracking.Id">
-                                <div class="card card-body">
-                                    @if (tracking.Comment != null)
-                                    {
-                                        <b>Комментарий к заданию:</b>
-                                        <fieldset disabled>
-                                            <textarea id="disabledTextInput" rows="2" cols="50">@tracking.Comment</textarea>
-                                        </fieldset>
-                                    }
-                                    <b>Назначено: </b>@tracking.Time
-                                    <form method="post" action="">
-                                        <textarea class="form-control" name="comment_accept" id="exampleFormControlTextarea1"
-                                                  placeholder="Введите свой комментарий..." rows="5" cols="5"></textarea>
-                                        <button type="submit" name="Accept" class="btn btn-success" style="float: left;"
-                                                value="@tracking.Id">
-                                            Готово
-                                        </button>
-                                    </form>
-                                </div>
-                            </div>
-                        </td>
-                    }
-                </tr>
+                case "Переносится":
+                    ProblemType = "Перенос";
+                    break;
+                case "Проверяется":
+                    ProblemType = "Проверка";
+                    break;
+                case "Дорабатывается":
+                    ProblemType = "Перенос (доработка)";
+                    break;
+                case "Утверждается":
+                    ProblemType = "Утверждение";
+                    break;
             }
 
-            if (tracking.Status.Name == "Переносится" && tracking.Task.DeveloperId == Model.UserId
-                 || tracking.Status.Name == "Проверяется" && tracking.Task.ReviewerId == Model.UserId
-                     || tracking.Status.Name == "Дорабатывается" && tracking.Task.DeveloperId == Model.UserId)
+            i++;
+
+            if (Status == "Не перенесён" && Developer == CurrentUser
+                    || Status == "Не проверен" && Reviewer == CurrentUser
+                        || Status == "Не доработан" && Developer == CurrentUser)
             {
-                <tr class="bg-info">
-                    <td>@i</td>
-                    <td>@tracking.Task.Course.Name</td>
-                    <td>@tracking.Task.Name</td>
-                    @switch (tracking.Status.Name)
-                    {
-                        case "Переносится":
-                            <td>Перенос</td>
-                            break;
-                        case "Проверяется":
-                            <td>Проверка</td>
-                            break;
-                        case "Дорабатывается":
-                            <td>Перенос (доработка)</td>
-                            break;
-                    }
-                    <td>@tracking.Time</td>
-                    <td>
-                        <button class="btn btn-warning btn-block" type="button" data-toggle="collapse" data-target="#{{tracking.Id}}"
-                                aria-expanded="false" aria-controls="collapseExample">
-                            Завершить
-                        </button>
-                        <div class="collapse" id="@tracking.Id">
-                            <div class="card card-body">
-                                <form method="post" action="">
-                                    <textarea class="form-control" name="comment_complete" id="exampleFormControlTextarea1" placeholder="Введите комментарий..." rows="5" cols="3"></textarea>
-                                    <button type="submit" name="Complete" class="btn btn-success" value="@tracking.Id">Принять</button>
-                                    @if (tracking.Task.ReviewerId == Model.UserId)
-                                    {
-                                        <button type="submit" name="Decline" class="btn btn-danger" value="@tracking.Id">Отклонить</button>
-                                    }
+                <tr data-toggle="collapse" data-target="@("#collapse" + i)" class="accordion-toggle">
+                    <td>@tracking.Status.Name</td>
+                    <td>@tracking.Id</td>
+                    <td>@tracking.Problem.Name</td>
+                    <td>@ProblemType</td>
+                </tr>
+                @if (Model.CanAcceptTask)
+                {
+                    <tr>
+                        <td colspan="6" class="hiddenRow">
+                            <div class="accordian-body collapse" id="@("collapse" + i)">
+                                @if (tracking.Comment != "")
+                                {
+                                    <b>Комментарий к заданию:</b>
+                                    <br />
+                                    @tracking.Comment
+                                    <br />
+                                }
+                                <b>Назначено: </b>@tracking.Time
+                                <form asp-controller="tasks" asp-action="table" onsubmit="Block(@tracking.Id)">
+                                    <div asp-validation-summary="All" class="text-danger"></div>
+                                    <div class="form-group">
+                                        <input type="hidden" asp-for="@tracking.Id" />
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" asp-for="@taskViewModel.Comment" class="form-control" placeholder="Введите свой комментарий..." />
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="submit" value="Принять задание" class="btn btn-success" id="@tracking.Id" />
+                                    </div>
                                 </form>
                             </div>
-                        </div>
-                    </td>
+                        </td>
+                    </tr>
+                }
+            }
+            
+
+            if (Status == "Переносится" && Developer == CurrentUser
+                   || Status == "Проверяется" && Reviewer == CurrentUser
+                       || Status == "Дорабатывается" && Developer == CurrentUser
+                            || Status == "Не утверждён" && User.IsInRole("Admin"))
+            {
+                <tr data-toggle="collapse" data-target="@("#collapse" + i)" class="accordion-toggle">
+                    <td>@tracking.Status.Name</td>
+                    <td>@tracking.Id</td>
+                    <td>@tracking.Problem.Name</td>
+                    <td>@ProblemType</td>
+                    <td>@tracking.Time</td>
                 </tr>
+
+                {
+                    <tr>
+                        <td colspan="6" class="hiddenRow">
+                            <div class="accordian-body collapse" id="@("collapse" + i)">
+                                @if (tracking.Comment != "")
+                                {
+                                    <b>Комментарий к заданию:</b>
+                                    <br />
+                                    @tracking.Comment
+                                    <br />
+                                }
+                                <form asp-controller="tasks" asp-action="table" onsubmit="Block(@tracking.Id)">
+                                    <div asp-validation-summary="All" class="text-danger"></div>
+                                    <div class="form-group">
+                                        <input type="hidden" asp-for="@tracking.Id" />
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" asp-for="@taskViewModel.Comment" class="form-control" placeholder="Введите свой комментарий..." />
+                                    </div>
+
+                                    @if (Reviewer == CurrentUser)
+                                    {
+                                        <div class="input-group mb-3">
+                                            <div class="input-group-prepend">
+                                                <label class="input-group-text" for="inputGroupSelect01">Оцените задание:</label>
+                                            </div>
+                                            <select asp-for="@taskViewModel.Tracking.Id"
+                                                    asp-items="@(new SelectListItem[]{
+                                                     new SelectListItem("Ошибок нет", "Ok"),
+                                                        new SelectListItem("Необходима доработка", "Rework") })">
+                                            </select>
+                                        </div>
+
+                                    }
+
+                                    @if (User.IsInRole("Admin"))
+                                    {
+                                        <div class="input-group mb-3">
+                                            <div class="input-group-prepend">
+                                                <label class="input-group-text" for="inputGroupSelect01">Оцените задание:</label>
+                                            </div>
+                                            <select asp-for="@taskViewModel.Tracking.Id"
+                                                    asp-items="@(new SelectListItem[]{
+                                                     new SelectListItem("Утвердить", "Ok"),
+                                                        new SelectListItem("Повторная проверка","Review"),
+                                                        new SelectListItem("Доработка", "Rework") })">
+                                            </select>
+                                        </div>
+                                    }
+                                    <div class=" form-group">
+                                        <input type="submit" value="Завершить задание" class="btn btn-success" id="@tracking.Id" />
+                                    </div>
+                                </form>
+                            </div>
+                        </td>
+                    </tr>
+                }
             }
 
-            if (tracking.Status.Name == "Перенесён" && tracking.Task.DeveloperId == Model.UserId
-                || tracking.Status.Name == "Проверен" && tracking.Task.ReviewerId == Model.UserId
-                    || tracking.Status.Name == "Доработан" && tracking.Task.DeveloperId == Model.UserId)
+
+            if (Status == "Перенесён" && Developer == CurrentUser
+                || Status == "Проверен" && Reviewer == CurrentUser
+                    || Status == "Доработан" && Developer == CurrentUser
+                        || ((Status == "Утверждён" || Status == "Утверждается") && User.IsInRole("Admin")))
+
             {
-                <tr class="bg-success">
-                    <td>@i</td>
-                    <td>@tracking.Task.Course.Name</td>
-                    <td>@tracking.Task.Name</td>
-                    @switch (tracking.Status.Name)
-                    {
-                        case "Перенесён":
-                            <td>Перенос</td>
-                            break;
-                        case "Проверен":
-                            <td>Проверка</td>
-                            break;
-                        case "Доработан":
-                            <td>Перенос (доработка)</td>
-                            break;
-                    }
+                <tr data-toggle="collapse" data-target="@("#collapse" + i)" class="accordion-toggle completed">
+                    <td>@Status</td>
+                    <td>@tracking.Id</td>
+                    <td>@tracking.Problem.Name</td>
+                    <td>@ProblemType</td>
                     <td>@tracking.StartTime</td>
                     <td>@tracking.Time</td>
                 </tr>
@@ -181,20 +211,4 @@
     </tbody>
 </table>
 
-@if (Model.PageViewModel.HasPreviousPage)
-{
-    <a asp-controller="tasks" asp-action="table"
-               asp-route-page="@(Model.PageViewModel.PageNumber - 1)"
-               class="btn btn-outline-primary">
-        Назад
-    </a>
-}
-
-@if (Model.PageViewModel.HasNextPage)
-{
-    <a asp-controller="tasks" asp-action="table"
-               asp-route-page="@(Model.PageViewModel.PageNumber + 1)"
-               class="btn btn-outline-primary">
-        Вперед
-    </a>
-}
+<partial name="_pagination" />
