--- a/Views/Users/Create.cshtml
+++ b/Views/Users/Create.cshtml
@@ -2,17 +2,17 @@
 @{
     ViewBag.Title = "Добавление пользователя";
 }
-    <form asp-action="Create" asp-controller="Users">
-        <div asp-validation-summary="All"></div>
-        <div class="form-group">
-            <label asp-for="UserName" class="control-label"></label>
-            <input asp-for="UserName" class="form-control" placeholder="Введите логин" />
-        </div>
-        <div class="form-group">
-            <label asp-for="Password" class="control-label"></label>
-            <input asp-for="Password" class="form-control" />
-        </div>
-        <div class="form-group">
-            <input type="submit" value="Добавить" class="btn btn-default" />
-        </div>
-    </form>
+<form asp-action="Create" asp-controller="Users">
+    <div asp-validation-summary="All"></div>
+    <div class="form-group">
+        <label asp-for="UserName" class="control-label"></label>
+        <input asp-for="UserName" class="form-control" placeholder="Введите логин..." />
+    </div>
+    <div class="form-group">
+        <label asp-for="Password" class="control-label"></label>
+        <input asp-for="Password" class="form-control" placeholder="Введите пароль..." />
+    </div>
+    <div class="form-group">
+        <input type="submit" value="Добавить" class="btn btn-primary" />
+    </div>
+</form>
