--- a/Views/Users/Edit.cshtml
+++ b/Views/Users/Edit.cshtml
@@ -8,12 +8,8 @@
         <input type="hidden" asp-for="Id" />
     </div>
     <div class="form-group">
-        <label asp-for="UserName" class="control-label"></label>
+        <label asp-for="UserName" class="control-label">Имя пользователя</label>
         <input type="text" asp-for="UserName" class="form-control" />
-    </div>
-    <div class="form-group">
-        <label asp-for="IsAdmin" class="control-label">Год рождения</label>
-        <input type="number" asp-for="IsAdmin" class="form-control" />
     </div>
     <div class="form-group">
         <input type="submit" value="Сохранить" class="btn btn-default" />
