--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -1,24 +1,26 @@
-﻿@model Microsoft.AspNetCore.Identity.UserManager<User>
+﻿@model IEnumerable<TasksDatabase.Models.User>
 @{
     ViewBag.Title = "Список пользователей";
 }
 
-<a asp-action="Create">Добавить пользователя</a> @*IEnumerable<TasksDatabase.Models.User>*@
+<h2>Список пользователей</h2>
 <table class="table">
-        <tr><th>Имя</th><th>Группа</th><th></th></tr>
-        @foreach (var user in Model.Users.ToList())
-        {
-            <tr>
-                <td>@user.UserName</td>
-                <td>@user.</td>
-                <td>
-                    <form asp-action="Delete" asp-route-id="@user.Id" method="post">
-                        <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@user.Id">Изменить</a>
-                        <button type="submit" class="btn btn-sm btn-danger">
-                            Удалить
-                        </button>
-                    </form>
-                </td>
-            </tr>
-        }
-    </table>
+    <tr><th>Имя пользователя</th><th></th><th></th></tr>
+    @foreach (var user in Model)
+    {
+        <tr>
+            <td>@user.UserName</td>
+            <td>
+                <form asp-action="Delete" asp-route-id="@user.Id" method="post">
+                    <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@user.Id">Изменить</a>
+                    <a class="btn btn-sm btn-primary" asp-action="ChangePassword" asp-route-id="@user.Id">Сменить пароль</a>
+                    <button type="submit" class="btn btn-sm btn-danger">
+                        Удалить
+                    </button>
+                </form>
+            </td>
+        </tr>
+    }
+</table>
+
+<a class="btn btn-info" asp-action="Create">Добавить пользователя</a>
